web-infras/parser/tests/fixtures/babel/es2022/class-static-block/invalid-await/output.txt
[SyntaxError]: Missing semicolon or line terminator. (5,13)
5|      await 42;
 |           ^
